[package]
name = "hyperbench-riscv-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { git = "https://github.com/rcore-os/riscv", features = ["inline-asm"] }
sbi-rt = "0.0.2"
buddy_system_allocator = "0.6"
spin = "0.9.4"
bitflags = "1.2.1"
aclint = "0.0.0"
